fixed layout issues

--- a/components/form/form.module.css
+++ b/components/form/form.module.css
@@ -49,7 +49,7 @@
 }
 
 .btnCtr {
-  position: fixed;
+  position: absolute;
   right: 30px;
   bottom: 52px;
   width: 36px;
